// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v-checkbox-functional Renders \`v-checkbox-functional\` with custom props 1`] = `
<div
  class="v-input v-input--selection-controls v-input--checkbox v-input--is-disabled v-input--hide-details theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-input--selection-controls__input"
      >
        <input
          aria-checked="true"
          class="hidden"
          disabled="disabled"
          role="checkbox"
          type="checkbox"
        />
        <div
          class="v-input--selection-controls__ripple primary--text"
        />
        <i
          class="v-icon material-icons primary--text theme--light"
        >
          check_box
        </i>
      </div>
      <label
        class="v-label theme--light"
      >
        Custom label
      </label>
    </div>
  </div>
</div>
`;

exports[`v-checkbox-functional Renders \`v-checkbox-functional\` with default props 1`] = `
<div
  class="v-input v-input--selection-controls v-input--checkbox theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-input--selection-controls__input"
      >
        <input
          aria-checked="false"
          class="hidden"
          role="checkbox"
          type="checkbox"
        />
        <div
          class="v-input--selection-controls__ripple primary--text"
        />
        <i
          class="v-icon material-icons theme--light"
        >
          check_box_outline_blank
        </i>
      </div>
      <label
        class="v-label theme--light"
        style="display: none;"
      >
        
      </label>
    </div>
  </div>
</div>
`;
